[package]
name = "yodoprice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
